# nds

./: Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
.cargo/linker/: armv5te-nintendo-ds.ld  armv5te-nintendo-dsi.ld
nds/: Cargo.toml
nds/examples/: app.rs
nds/src/: interrupt.rs  lib.rs  ops.rs  system.rs
nds/src/fifo/: mod.rs  queue.rs
nds_app/: Cargo.toml  build.rs
nds_app/src/: main.rs
nds_capi/: Cargo.toml
nds_capi/src/: fifo.rs  interrupt.rs  lib.rs  ops.rs  system.rs
nds_crt/: Cargo.toml  build.rs
nds_crt/src/: ipc.rs  lib.rs  mpu.rs
nds_hal/: Cargo.toml
nds_hal/src/: interrupt.rs  lib.rs  math.rs  system.rs
nds_hal/src/fifo/: mod.rs
nds_rt/: Cargo.toml
nds_rt/src/: lib.rs  math.rs
