[workspace]
resolver = "3"
members = ["nds_app", "nds_rt"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Abbie <abbiepup@proton.me>"]
repository = "https://github.com/abbiepup/nds"

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
panic = "abort"
lto = true
